# aiagent01

./: README.md
fraud_experts/: README.md  fraud_detection_evaluation_report.md  pyproject.toml  run.py
fraud_experts/src/fraud_experts/: crew.py  main.py
fraud_experts/src/fraud_experts/config/: agents.yaml  tasks.yaml
