[project]
name = "fraud_experts"
version = "0.1.0"
description = "fraud-experts using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.1"
]

[project.scripts]
fraud_experts = "fraud_experts.main:run"
run_crew = "fraud_experts.main:run"
train = "fraud_experts.main:train"
replay = "fraud_experts.main:replay"
test = "fraud_experts.main:test"
run_with_trigger = "fraud_experts.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
